[package]
name = "jwtd"
version = "0.4.2"
authors = ["Arnauld <arnauld.loyer@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
warp = "0.3.1"
bytes = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" 
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
rust-crypto = "^0.2"
jsonwebtoken = "8.3.0"
chrono = "0.4"
# to fix similar error - https://github.com/bluss/indexmap/issues/151
indexmap = { version = "1.5.2", features = ["std"] }
openssl = "0.10.40"
hex = "0.4.3"
base64 = "0.21.0"
bcrypt = "0.14.0"

[dev-dependencies]
ctor = "0.2.0"

[profile.release]
debug = true
