[package]
name = "jwtd"
version = "0.5.11"
authors = ["Arnauld <arnauld.loyer@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
warp = "0.3"
bytes = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" 
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
jsonwebtoken = "8.3.0"
# to fix similar error - https://github.com/bluss/indexmap/issues/151
indexmap = { version = "1.5.2", features = ["std"] }
rsa = "0.8.2"
pem = "2.0.1"
hex = "0.4.3"
sha1 = "0.10.5"
sha2 = "0.10.5"
rand = "0.8"
rand_core = { version = "0.6", default-features = false }
base64 = "0.21.0"
bcrypt = "0.14.0"
time = {version = "0.3", features = ["alloc"]}

[dev-dependencies]
ctor = "0.2.0"

[profile.release]
debug = true
